@@ -1,5 +1,6 @@
 Version 2.9.9dev:
 
+* Only preselect the favorite variant if the files are found.
 * Added 8BitDo controller configurations, updated dualshock 3 for Linux.
 * Index uncompressed content of .gz/.adz/.roz files.
 * Ignore .lha files when lhafile extension is not present.
